--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^3.6.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
