--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-viewport": "^9.0.8",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/react-vite": "^9.0.15",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
