--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-svg": "^16.3.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
   },
