--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "react-svg": "^16.3.0",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
