--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "react-svg": "^16.3.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
   },
