--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
